// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Loader > rendrer med riktig className når isCentered er false 1`] = `
<DocumentFragment>
  <svg
    aria-labelledby="loader-«r1»"
    aria-live="polite"
    class="navds-loader navds-loader--medium navds-loader--neutral"
    data-testid="loader"
    focusable="false"
    preserveAspectRatio="xMidYMid"
    viewBox="0 0 50 50"
  >
    <title
      id="loader-«r1»"
    >
      fake title
    </title>
    <circle
      class="navds-loader__background"
      cx="25"
      cy="25"
      fill="none"
      r="20"
      xmlns="http://www.w3.org/2000/svg"
    />
    <circle
      class="navds-loader__foreground"
      cx="25"
      cy="25"
      fill="none"
      r="20"
      stroke-dasharray="50 155"
    />
  </svg>
</DocumentFragment>
`;

exports[`Loader > rendrer med riktig className og props by default 1`] = `
<DocumentFragment>
  <svg
    aria-labelledby="loader-«r0»"
    aria-live="polite"
    class="navds-loader _loader__isCentered_1c4a2e navds-loader--medium navds-loader--neutral"
    data-testid="loader"
    focusable="false"
    preserveAspectRatio="xMidYMid"
    viewBox="0 0 50 50"
  >
    <title
      id="loader-«r0»"
    >
      fake title
    </title>
    <circle
      class="navds-loader__background"
      cx="25"
      cy="25"
      fill="none"
      r="20"
      xmlns="http://www.w3.org/2000/svg"
    />
    <circle
      class="navds-loader__foreground"
      cx="25"
      cy="25"
      fill="none"
      r="20"
      stroke-dasharray="50 155"
    />
  </svg>
</DocumentFragment>
`;
